; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/x86emu/extr_x86emu.c_aad_word.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/x86emu/extr_x86emu.c_aad_word.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.x86emu = type { i32 }

@F_CF = common dso_local global i32 0, align 4
@F_AF = common dso_local global i32 0, align 4
@F_OF = common dso_local global i32 0, align 4
@F_SF = common dso_local global i32 0, align 4
@F_ZF = common dso_local global i32 0, align 4
@F_PF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.x86emu*, i32)* @aad_word to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @aad_word(%struct.x86emu* %0, i32 %1) #0 {
  %3 = alloca %struct.x86emu*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.x86emu* %0, %struct.x86emu** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = ashr i32 %8, 8
  %10 = and i32 %9, 255
  store i32 %10, i32* %6, align 4
  %11 = load i32, i32* %4, align 4
  %12 = and i32 %11, 255
  store i32 %12, i32* %7, align 4
  %13 = load i32, i32* %7, align 4
  %14 = load i32, i32* %6, align 4
  %15 = mul nsw i32 10, %14
  %16 = add nsw i32 %13, %15
  %17 = and i32 %16, 255
  store i32 %17, i32* %5, align 4
  %18 = load i32, i32* @F_CF, align 4
  %19 = call i32 @CLEAR_FLAG(i32 %18)
  %20 = load i32, i32* @F_AF, align 4
  %21 = call i32 @CLEAR_FLAG(i32 %20)
  %22 = load i32, i32* @F_OF, align 4
  %23 = call i32 @CLEAR_FLAG(i32 %22)
  %24 = load i32, i32* %5, align 4
  %25 = and i32 %24, 128
  %26 = load i32, i32* @F_SF, align 4
  %27 = call i32 @CONDITIONAL_SET_FLAG(i32 %25, i32 %26)
  %28 = load i32, i32* %5, align 4
  %29 = icmp eq i32 %28, 0
  %30 = zext i1 %29 to i32
  %31 = load i32, i32* @F_ZF, align 4
  %32 = call i32 @CONDITIONAL_SET_FLAG(i32 %30, i32 %31)
  %33 = load i32, i32* %5, align 4
  %34 = and i32 %33, 255
  %35 = call i32 @PARITY(i32 %34)
  %36 = load i32, i32* @F_PF, align 4
  %37 = call i32 @CONDITIONAL_SET_FLAG(i32 %35, i32 %36)
  %38 = load i32, i32* %5, align 4
  ret i32 %38
}

declare dso_local i32 @CLEAR_FLAG(i32) #1

declare dso_local i32 @CONDITIONAL_SET_FLAG(i32, i32) #1

declare dso_local i32 @PARITY(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
